Correções e ajustes - panteísmo

--- a/panteismo.html
+++ b/panteismo.html
@@ -15,57 +15,147 @@
             <img id="perfil" src="\imagens\perfil-bia.jpg">
             <div id="texto-perfil">
                 <h4>PANTEÍSMO (panteísta):</h4>
+                <hr>
                 O significado de "Panteísmo" está no próprio nome. "Pan", no grego
-                significa "tudo", e "theos" significa "Deus". Desta forma este termo
-                se traduz por: "tudo é Deus". O panteísta crê que absolutamente tudo
-                e todos, compõem aquilo que se entende por "Deus", ou seja, tudo que
-                existe no universo são partes de um todo, o "deus cósmico", assim
-                como cada célula de seu corpo pode ser considerada você. E neste
-                sentido é muito distinto do politeísmo, pois não vê Deus como muitos,
-                mas como uma unidade, então só admite Deus como o todo.
+                significa "tudo", e "theos" significa "Deus". Desta forma este termo se
+                traduz por: "tudo é Deus". O panteísta crê que absolutamente tudo, e todos,
+                compõem aquilo que se entende por "Deus". Cada átomo deste universo é Deus,
+                assim como cada célula de seu corpo pode ser considerada você, ou seja,
+                tudo que existe no universo são partes de um todo, o "deus cósmico". E
+                neste sentido é muito distinto do politeísmo, pois vê Deus como uma unidade,
+                e não como muitos deuses; definitivamente, só admite Deus como o todo.
+                Nesta linha de pensamento, os seres viventes não seria cada um deles, um
+                deus particular, mas teriam em seu interior uma parte da essência do "todo".
             </div>
         </div>
-        <div id="quadro2">O panteísta não acredita num Deus pessoal. Deus não existe
-            fora do mundo, e nem o mundo fora de Deus. Assim, ele não é uma pessoa com
-            quem se possa relacionar, como pensa os cristãos. Para ter um relacionamento
-            com Deus é preciso "torna-se um" com tudo o que existe. Por esta e por outras,
-            é a linha de pensamento que mais se identifica ao pensamento filosófico
-            oriental, como o <div class="tooltip">
-                <h3>budista</h3><span class="tooltip2">Pessoa adepta da filosofia ou religião,
-                    não teísta que surgiu originalmente na Índia por volta do século VI a.C. e
-                    abrange diversas tradições, crenças e práticas baseadas nos ensinamentos de Buda.
+        <div id="quadro2">O panteísta não acredita que Deus exista fora do mundo, muito
+            menos que o mundo possa persistir a parte de Deus. Assim, Deus não é um ser
+            pessoal com quem se possa relacionar, como pensa os cristãos. Mas é possível
+            falar de um relacionamento com Deus numa perspectiva de "torna-se um" com tudo
+            o que existe. Isso significa que alguém pode adotar uma perspectiva panteísta,
+            independentemente de sua afiliação religiosa. Por exemplo, é viável ser um
+            cristão panteísta, já que o panteísmo encontra eco no pensamento de alguns
+            místicos cristãos. Também encontramos conceitos panteístas em muitas religiões
+            orientais, como, por exemplo, o
+            <div class="tooltip">
+                <h3>hinduísmo</h3>,
+                <span class="tooltip1"> É a terceira maior religião do
+                    mundo, e é também considerada a mais antiga. Algumas das principais
+                    características são: crença em múltiplas divindades e na reencarnação.
                 </span>
-            </div>, por exemplo.<br>
-            Essa ênfase da unidade de Deus com o universo, possibilitou uma vertente
-            do panteísmo chamada de panenteísmo. Nela, também se crê que Deus está no
-            universo e que o universo está em Deus como uma partícula divina, mas com
-            uma pequena diferença, Deus também existe fora dele.
+            </div>
+            e o
+            <div class="tooltip">
+                <h3>budismo</h3>.
+                <span class="tooltip2">Filosofia de vida que é guiada pelos ensinamentos
+                    de Buda. Os budistas acreditam no caminho da libertação através da
+                    consciência, e de práticas diárias e crenças espirituais, como a
+                    meditação.
+                </span>
+            </div>
+            Surpreendentemente, até um ateu pode abraçar ideias panteístas. Isso pode
+            parecer paradoxal à primeira vista, mas alguns ateus adotam, sim, uma visão
+            panteísta do universo, como uma maneira de expressar seu profundo respeito pela
+            natureza e sua admiração pela complexidade e beleza do mundo natural, sem,
+            contudo, acreditar em divindades ou seres sobrenaturais. Nesse contexto, a
+            espiritualidade panteísta é mais uma forma de se conectar com o mundo natural
+            do que uma crença em entidades divinas.
         </div>
-        <img src="\imagens\voltaire.png">
-        <div id="quadro3">Gosto muito dessa maneira de pensar, panenteísta. Não consigo
-            entender como alguém olha para o universo e não fique maravilhado com tudo
-            o que vê. É tudo tão encantador que não dá para negar que Deus está em tudo.
-            Eu acho que, o que Deus quer de nós, é que desfrutemos ao máximo de tudo que existe.
-            Como diz aquele ditado: Deus deu a vida, para que cada um cuide da sua. Cada
-            um faz o seu caminho, e é mais feliz quem aproveita cada minuto, e cada coisa
-            como uma dádiva divina. Não acho que o ser humano é mau, todo mundo pode escolher
-            ser bom, se quiser. A meu ver, harmonia é a palavra-chave do universo. Em meu
-            ponto de vista, o pensamento panenteísta é o que harmoniza melhor, não só com
-            o universo fora de nós, como também com o universo de ideias dentro de nós.
-            Ele pacifica a alma, dá confiança e expectativas de um futuro, pois é o mais
-            otimista. Contraria o pessimismo de pensamentos menores, como inferno e sofrimento,
-            e impulsiona a humanidade ao progresso científico e filosófico.
+        <div id="quadro3">
+            <div id="caixa-texto3A">
+                O panteísmo está presente também entre os maiores nomes da ciência, como
+                <div class="tooltip">
+                    <h3>Albert Einstein</h3>.
+                    <span class="tooltip3">(1879 - 1955) Foi um físico teórico alemão, que
+                        desenvolveu a teoria da relatividade geral, um dos pilares da física
+                        moderna ao lado da mecânica quântica. Recebeu o Prêmio Nobel de Física
+                        de 1921 "por suas contribuições à física teórica" e, especialmente,
+                        por sua descoberta da lei do efeito fotoelétrico, que foi fundamental
+                        no estabelecimento da teoria quântica.
+                    </span>
+                </div>
+                Mesmo que ele fosse descrito como agnóstico ou deísta, ele frequentemente usava
+                linguagem panteísta em suas declarações sobre o universo. Na declaração
+                abaixo, Einstein fala sobre a unidade e interconexão de todas as coisas.
+                Embora ele não se refira explicitamente a Deus ou divindade, suas palavras
+                podem ser interpretadas como uma visão panteísta de sua existência, onde o
+                universo e tudo o que ele contém são vistos como uma única entidade
+                interligada.
+            </div>
+            <div id="caixa-texto3B">"Todo ser humano é parte de um todo, chamado por nós de
+                'Universo', uma parte limitada no tempo e no espaço. Ele [o homem]
+                experimenta a si mesmo, seus pensamentos e sentimentos como algo separado
+                do resto - uma ilusão de ótica de sua consciência. Essa ilusão é uma prisão
+                para nós, restringindo-nos a nossos desejos pessoais e afeições por pessoas
+                próximas. Nossa tarefa deve ser liberar-nos dessa prisão, ampliando nosso
+                círculo de compaixão para abraçar todas criaturas vivas e toda a natureza
+                em sua beleza."
+            </div>
+            <img id="imgQ3" src="\imagens\albert-einstein2.png">
         </div>
+        <div id="quadro4">
+            <div id="caixa-texto4A">
+                Essa ênfase da unidade de Deus com o universo, possibilitou uma vertente
+                do panteísmo chamada de <strong>panenteísmo</strong>. Nela, também se crê
+                que Deus está no universo e que o universo está em Deus como uma partícula
+                divina. Mas há uma pequena diferença: Deus também existe fora dele. De acordo
+                com o teísmo há um Deus que cria o mundo, e do ponto de vista do panteísmo
+                não se pode falar de um Deus que cria o mundo. Estas duas visões são
+                claramente opostas e a princípio inconciliáveis. No entanto, o panenteísmo
+                apresenta um argumento que permite harmonizar as duas visões: a natureza de
+                Deus tem duas dimensões em um mesmo ser. Deus é o mesmo que o mundo, e,
+                paralelamente, é algo
+                <div class="tooltip">
+                    <h3>transcendente</h3>
+                    <span class="tooltip4">
+                        Característica daquilo que é transcendente; referente àquilo que
+                        se encontra além ou que é superior à experiência humana.
+                    </span>
+                </div>
+                ao mundo.
+            </div>
+            <div id="caixa-texto4B">
+                Há ainda outra subdivisão do panteísmo, chamada <strong>pandeísmo</strong>.
+                Como já dito, o panteísmo costuma ser adotado por muitas religiões e até por
+                algumas seitas exotéricas. Já o pandeísmo, assim como qualquer outra forma
+                de deísmo, não é adotado por nenhuma religião ou seita, já que o pandeísta
+                não pratica cultos. Não acredita na intervenção divina e procura Deus através
+                do estudo racional e dos seus próprios pensamentos. O pandeísta é um livre
+                pensador.
+            </div>
+        </div>
+        <div id="quadro5">
+            <div id="caixa-texto5">
+                Gosto muito dessa maneira de pensar, panenteísta. Não consigo entender como
+                alguém olha para o universo e não fique maravilhado com tudo o que vê. É
+                tudo tão encantador que não dá para negar que Deus está em tudo. Eu acho
+                que, o que Deus quer de nós, é que desfrutemos ao máximo de tudo que existe.
+                Como diz aquele ditado: Deus deu a vida, para que cada um cuide da sua.
+                Cada um faz o seu caminho, e é mais feliz quem aproveita cada minuto, e
+                cada coisa como uma dádiva divina. Não acho que o ser humano é mau, todo
+                mundo pode escolher ser bom, se quiser. A meu ver, harmonia é a palavra-chave
+                do universo. Em meu ponto de vista, o pensamento panenteísta é o que
+                harmoniza melhor, não só com o universo fora de nós, como também com o
+                universo de ideias dentro de nós. Ele pacifica a alma, dá confiança e
+                expectativas de um futuro, pois é o mais otimista. Contraria o pessimismo
+                de pensamentos menores, como inferno e sofrimento, e impulsiona a humanidade
+                ao progresso científico e filosófico.
+            </div>
+        </div>
+        <img id="imgQ5" src="\imagens\voltaire.png">
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\ateismo.png"></a>
                 </td>
                 <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\deismo.png"></a></td>
                 <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\gnosticismo.png"></a></td>
                 <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
