Correções e ajustes - index e pagina2

--- a/ateismo.html
+++ b/ateismo.html
@@ -172,7 +172,7 @@
             </tr>
         </table>
         <div id="tela-final">
-            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+            <button id="link"><img id="mensagem-final" src="/imagens/mensagem-final.png"></button>
         </div>
     </div>
     <script defer src="\scripts\ateismo.js"></script>
