--- a/pagina2.html
+++ b/pagina2.html
@@ -64,12 +64,10 @@
             Somos apenas matéria que se decompõe com a morte e fim?
             O que acontece depois da morte? Para onde vamos?
             É possível confiar no conhecimento que nos foi e é passado por outros?
-        </div>
-        <div id="quadro4">
             Antes de tudo seria proveitoso
             <div class="tooltip">
                 <h3>ratificar</h3><span class="tooltip4">
-                    reafirmar, validar, confirmar</span>
+                    Reafirmar, validar, confirmar.</span>
             </div>
             alguns conceitos que serão fundamentais nessa discussão.
             Abaixo aparecem algumas das diferentes linhas de pensamento que tentam
@@ -94,7 +92,7 @@
             </tr>
         </table>
         <div id="tela-final">
-            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+            <button id="link"><img id="mensagem-final" src="/imagens/mensagem-final.png"></button>
         </div>
     </div>
     <script defer src="/scripts/iniciandopaginas.js"></script>
