--- a/panteismo.html
+++ b/panteismo.html
@@ -163,7 +163,7 @@
             </tr>
         </table>
         <div id="tela-final">
-            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+            <button id="link"><img id="mensagem-final" src="/imagens/mensagem-final.png"></button>
         </div>
     </div>
     <script defer src="\scripts\panteismo.js"></script>
