--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -119,21 +119,20 @@
         <img id="imgQ5" src="\imagens\rene-descartes.png">
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\ateismo.png"></a>
-                </td>
-                <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\panteismo.png"></a></td>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\ateismo.png"></a></td>
+                <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\deismo.png"></a></td>
-                <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next">
+                    <img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
         <div id="tela-final">
