--- a/deismo.html
+++ b/deismo.html
@@ -17,7 +17,7 @@
                 <h4>DEÍSMO (DEÍSTA)</h4>
                 <hr>
                 De cara vou dizer que um deísta é alguém que acredita em Deus, mas não
-                exatamente como um teísta. Os deístas acreditam na criação do universo 
+                exatamente como um teísta. Os deístas acreditam na criação do universo
                 por uma inteligência ou poder superior, que pode até ser chamado de Deus,
                 mas tal ideia estaria mais próxima de uma “força maior”, do que de um
                 ser pessoal que interfira no dia a dia das pessoas. Para um deísta é
@@ -96,21 +96,29 @@
             contrário às religiões. Muitos afirmam que ele acreditava em Deus, mas não
             é exatamente isso que se lê em uma de suas cartas:
         </div>
-        <img id="imgQ4" src="\imagens\alberteinstein.png">
+        <img id="imgQ4" src="\imagens\albert-einstein1.png">
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\teismo.png"></a>
                 </td>
-                <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\panteismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\ateismo.png"></a>
+                </td>
+                <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\panteismo.png"></a>
+                </td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
-                <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
-                            src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\deismo.png"></a>
+                </td>
+                <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\gnosticismo.png"></a>
+                </td>
+                <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next">
+                        <img class="opcao" src="\imagens\agnosticismo.png"></a>
+                </td>
             </tr>
         </table>
         <div id="tela-final">
@@ -120,4 +128,5 @@
     <script defer src="\scripts\deismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
+
 </html>
